Agregue exportar PDF de la asistencia y details Arregle mi fallido springsecurity Arregle mi fallido isAuthenticated

--- a/ConsumidorControl/src/main/resources/templates/indice.html
+++ b/ConsumidorControl/src/main/resources/templates/indice.html
@@ -39,7 +39,7 @@
     <!-- Main Content -->
     <main class="container">
         <div class="container mt-4">
-            <h1 th:if="${advertencia == null}">Bienvenido!</h1>
+            <h1 th:if="${advertencia == null}">¡Bienvenido!</h1>
             <br th:if="${advertencia != null and !advertencia.empty}">
             <h2 th:if="${advertencia != null and !advertencia.empty}" th:text="${advertencia}"></h2>
             
