--- a/ConsumidorControl/src/main/resources/templates/verTablas.html
+++ b/ConsumidorControl/src/main/resources/templates/verTablas.html
@@ -12,11 +12,10 @@
         <main class="container">
             <h1>Formularios</h1>
             <ul class="list-group">
-                <li class="list-group-item"><a th:href="@{/alumnos/}">Tabla Alumno</a></li>
-                <li class="list-group-item"><a th:href="@{/individuos/}">Tabla Individuo</a></li>
-                <li class="list-group-item"><a th:href="@{/horarios/}">Tabla Horario</a></li>
-                <li class="list-group-item"><a th:href="@{/profesores/}">Tabla Profesores</a></li>
-                <li class="list-group-item"><a th:href="@{/asistencias/}">Tabla Asistencias</a></li>
+                <li class="list-group-item"><a th:href="@{/alumnos/}">Ver alumnado</a></li>
+                <li class="list-group-item"><a th:href="@{/horarios/}">Ver horario de clases</a></li>
+                <li class="list-group-item"><a th:href="@{/profesores/}">Ver profesores</a></li>
+                <li class="list-group-item"><a th:href="@{/asistencias/}">Ver asistencias</a></li>
             </ul>
 
         </main>
