--- a/ConsumidorControl/src/main/resources/templates/login.html
+++ b/ConsumidorControl/src/main/resources/templates/login.html
@@ -2,16 +2,56 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
+    <!-- Enlace a Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: 'Arial', sans-serif;
+        }
+        .login-form {
+            background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente para el formulario */
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-    <form th:action="@{/login}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" />
-        <br />
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" />
-        <br />
-        <button type="submit">Login</button>
-    </form>
+    <div class="login-form">
+        <form th:action="@{/login}" method="post">
+            <div class="form-group">
+                <label for="username">Correo</label>
+                <input type="text" id="username" name="username" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="password">Clave de Seguridad</label>
+                <input type="password" id="password" name="password" class="form-control" />
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
+        </form>
+    </div>
+
+    <!-- JavaScript para escoger una imagen de fondo aleatoria -->
+    <script>
+        // Número total de imágenes disponibles
+        const totalImages = 6;
+        // Seleccionar un número aleatorio entre 1 y 6
+        const randomIndex = Math.floor(Math.random() * totalImages) + 1;
+        // Construir la ruta de la imagen aleatoria
+        const randomImage = `${randomIndex}.jpeg`; // Asegúrate de que la ruta sea correcta
+        // Establecer la imagen de fondo
+        document.body.style.backgroundImage = `url(images/${randomImage})`;
+    </script>
+
+    <!-- Enlace a Bootstrap JS y dependencias -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
